--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "name": "projeto-final-rick-and-morty",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": "https://github.com/igorfa17/projeto-final-rick-and-morty.git",
+  "author": "igorfa17 <igorfa17@gmail.com>",
+  "dependencies": {
+    "node": "^20.2.0"
+  }
 }
